added css for nice buttons

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* CSS */
-.button-29 {
+.button {
     align-items: center;
     appearance: none;
     background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
@@ -30,16 +30,16 @@
     font-size: 18px;
 }
 
-    .button-29:focus {
+    .button:focus {
         box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
     }
 
-    .button-29:hover {
+    .button:hover {
         box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
         transform: translateY(-2px);
     }
 
-    .button-29:active {
+    .button:active {
         box-shadow: #3c4fe0 0 3px 7px inset;
         transform: translateY(2px);
     }
